surface units fix

--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -309,18 +309,18 @@ Furthermore, in the optimization of either xenon uptake or Xe/Kr selectivity, it
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_sa.pdf}
   \hfill
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_sa_selectivity.pdf}
-  \caption{On the left: scatterplot of the xenon uptake as a function of the selectivity and labeled by the values of the surface area. On the right: scatterplot of the selectivity and the surface area labeled by the quantity of xenon adsorbed. The selectivity and uptake are calculated by a GCMC simulation of a 20:80 Xe/Kr mixture.}\label{fgr:sa}
+  \caption{On the left: scatterplot of the xenon uptake as a function of the selectivity and labeled by the values of the surface area (in \si{\square\meter\per\cubic\centi\meter}). On the right: scatterplot of the selectivity and the surface area labeled by the quantity of xenon adsorbed. The selectivity and uptake are calculated by a GCMC simulation of a 20:80 Xe/Kr mixture.}\label{fgr:sa}
 \end{figure}
 
-Studies on methane storage applications, conducted by Wilmer et al.\autocite{Wilmer_2012} and by Fernandez et al.\autocite{Fernandez_2013}, have shown that methane uptake reaches its maximum within a specific optimal range of surface area values ($2500$-$3000$~\si{\square\meter\cubic\centi\meter}). Increasing the surface area beyond the range does not lead to higher values of methane uptake. This limitation is also observed for the Xe/Kr  selectivity, as shown in the right plot of the Figure~\ref{fgr:sa}. Materials with a selectivity around $5$ tend to have surface areas ranging from $0$ to $4000$~\si{\square\meter\cubic\centi\meter}, while those with a selectivity above $40$ tend to have a surface area below $2500$~\si{\square\meter\cubic\centi\meter}. On the other hand, the optimal surface area for xenon uptake falls between $2000$ and $3000$~\si{\square\meter\cubic\centi\meter}. It is evident that the relationship between selectivity and surface area is highly complex, and a precise range of surface areas does not guarantee high selectivity. Other structural descriptors need to be considered in conjunction with this descriptor to fully characterize selectivity. 
+Studies on methane storage applications, conducted by Wilmer et al.\autocite{Wilmer_2012} and by Fernandez et al.\autocite{Fernandez_2013}, have shown that methane uptake reaches its maximum within a specific optimal range of surface area values ($2500$-$3000$~\si{\square\meter\per\cubic\centi\meter}). Increasing the surface area beyond the range does not lead to higher values of methane uptake. This limitation is also observed for the Xe/Kr  selectivity, as shown in the right plot of the Figure~\ref{fgr:sa}. Materials with a selectivity around $5$ tend to have surface areas ranging from $0$ to $4000$~\si{\square\meter\per\cubic\centi\meter}, while those with a selectivity above $40$ tend to have a surface area below $2500$~\si{\square\meter\per\cubic\centi\meter}. On the other hand, the optimal surface area for xenon uptake falls between $2000$ and $3000$~\si{\square\meter\per\cubic\centi\meter}. It is evident that the relationship between selectivity and surface area is highly complex, and a precise range of surface areas does not guarantee high selectivity. Other structural descriptors need to be considered in conjunction with this descriptor to fully characterize selectivity. 
 
-The 3D histogram in Figure~\ref{fgr:3D_hist_sa_vol} provides a visual representation of the surface area distribution for different selectivity categories. For selectivity values higher than $92$, the surface areas are mostly below $2000$~\si{\square\meter\cubic\centi\meter}. In the range of $92$ to $35$ selectivity, the distribution extends slightly wider, reaching up to $2500$~\si{\square\meter\cubic\centi\meter}. For selectivity values between $35$ and $13$, the interval spans a larger range, up to $3500$~\si{\square\meter\cubic\centi\meter}, but remains centered predominantly between $1000$ and $2500$~\si{\square\meter\cubic\centi\meter}. This split view of the distributions provides a better understanding of the characteristics of the best materials. However, it is important to note that surface area is not a deterministic variable as it is not possible to deduce selectivity based on surface area alone. A surface area between $500$ and $1000$~\si{\square\meter\cubic\centi\meter} may have a relatively high chance of exhibiting selectivity, but it encompasses a large number of materials and is even more likely to have selectivity values between $5$ and $35$ rather than values higher than that. 
+The 3D histogram in Figure~\ref{fgr:3D_hist_sa_vol} provides a visual representation of the surface area distribution for different selectivity categories. For selectivity values higher than $92$, the surface areas are mostly below $2000$~\si{\square\meter\per\cubic\centi\meter}. In the range of $92$ to $35$ selectivity, the distribution extends slightly wider, reaching up to $2500$~\si{\square\meter\per\cubic\centi\meter}. For selectivity values between $35$ and $13$, the interval spans a larger range, up to $3500$~\si{\square\meter\per\cubic\centi\meter}, but remains centered predominantly between $1000$ and $2500$~\si{\square\meter\per\cubic\centi\meter}. This split view of the distributions provides a better understanding of the characteristics of the best materials. However, it is important to note that surface area is not a deterministic variable as it is not possible to deduce selectivity based on surface area alone. A surface area between $500$ and $1000$~\si{\square\meter\per\cubic\centi\meter} may have a relatively high chance of exhibiting selectivity, but it encompasses a large number of materials and is even more likely to have selectivity values between $5$ and $35$ rather than values higher than that. 
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth,trim={2cm 0 2cm 2cm},clip]{figures/2-thermo/3D_hist_selec_SA.pdf}
   \hfill
   \includegraphics[width=0.48\textwidth,trim={2cm 0 2cm 2cm},clip]{figures/2-thermo/3D_hist_selec_vol.pdf}
-  \caption{3D histograms of in a bidimensional space formed by the Xe/Kr selectivity and the surface areas (on the left) and formed by the Xe/Kr selectivity and the pore void fractions (on the right). A base 10 logarithm has been applied to the selectivity values. Bin size increased by 2.4 (on log scale) for the selectivity, by about $500$~\si{\square\meter\cubic\centi\meter} for the surface areas and by $0.125$ for the void fraction. }\label{fgr:3D_hist_sa_vol}
+  \caption{3D histograms of in a bidimensional space formed by the Xe/Kr selectivity and the surface areas (on the left) and formed by the Xe/Kr selectivity and the pore void fractions (on the right). A base 10 logarithm has been applied to the selectivity values. Bin size increased by 2.4 (on log scale) for the selectivity, by about $500$~\si{\square\meter\per\cubic\centi\meter} for the surface areas and by $0.125$ for the void fraction. }\label{fgr:3D_hist_sa_vol}
 \end{figure}
 
 \subsubsection{Void fraction and selectivity}
