--- a/1-screening.tex
+++ b/1-screening.tex
@@ -9,8 +9,7 @@
 
 \section{Nanoporous materials}
 
-Before exploring the screening methodologies of screening, the first section aims to introduce key concepts related to the system of interest, specifically nanoporous materials. These concepts will be referred consistently throughout the text, as the structural characteristics of these materials
-are intricately linked to their performance in targeted applications.
+Before exploring the screening methodologies of screening, the first section aims to introduce key concepts related to the system of interest, specifically nanoporous materials. These concepts will be referred consistently throughout the text, as the structural characteristics of these materials are intricately linked to their performance in targeted applications.
 
 \subsection{The main characteristics of nanoporous materials}
 
@@ -378,7 +377,11 @@ In the future, computational high-throughput screening could be integrated more 
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
 
-This chapter introduced different studies on the screening of nanoporous material properties coming from a large set of research fields from adsorption to transport properties and exploring the more eclectic mechanical, thermal and catalytic properties. Considering all the different approaches gathered from the literature, the next chapter will aim at better describing the microscopic origins of the xenon/krypton separation in nanoporous materials through a thermodynamics-driven screening. This study will include the study of relationships between the separation performance and geometrical characteristics of the structures, the identification of the thermodynamic nature of the separation. By doing so, some interesting effects were unraveled and are expected to be advantageous for accelerating the evaluation of the selectivity at any pressure values.
+This first chapter introduces different studies on the screening of nanoporous material properties coming from a large set of research fields from adsorption to transport properties and exploring the more eclectic mechanical, thermal and catalytic properties. Considering all the different approaches gathered from the literature, this thesis aims at exploring the different screening techniques to accurately and efficiently evaluate the adsorption and transport properties related to the Xe/Kr separation. To achieve this, I developed new algorithms for more efficient samplings combined with the development of better descriptors within an ML-assisted approach.
+Improving the screening methodologies can eventually allow a physically more precise description of separation process at the molecular level. For instance, the final chapter explores ways to improve screenings so that new materials can emerge from computational screenings. 
+
+In particular, the next chapter starts drawing some initial observations that guide us throughout the development of this thesis. This study includes the analysis of relationships between the separation performance and geometrical characteristics of the structures, the identification of the thermodynamic nature of the separation. By doing so, some interesting effects are unraveled and are expected to be advantageous for accelerating the evaluation of the selectivity at any pressure values.
+
 
 \OnlyInSubfile{\printglobalbibliography}
 
