--- a/remerciements.tex
+++ b/remerciements.tex
@@ -45,8 +45,7 @@ Siwar \textsc{Chibani}, pour ta bonne humeur et nos discussions sur les défis d
 
 Je tiens à exprimer ma profonde gratitude envers tous mes amis qui ont fait le déplacement pour assister à ma soutenance de thèse, même si le sujet était bien loin de leurs centres d'intérêt. En premier lieu, je souhaite remercier Agathe \textsc{Massiot}, mon amie de collège. Qui aurait cru qu'elle viendrait depuis la Normandie jusqu'à Paris pour me soutenir, près de vingt ans plus tard ? Thomas \textsc{Hossen}, mon fidèle ami depuis la prépa, avec qui j'ai partagé d'innombrables bons moments avec moi, que ce soit dans les restaurants, les salles de concert ou les théâtres. Je lui suis infiniment reconnaissant d'être venu m'encourager lors de cette dernière étape de ma formation.
 
-À mes amis rencontrés pendant ma thèse, avec qui j'ai partagé de mémorables moments dans les bars, lors de soirées jeux et de voyages : Nicolas, Daniel, Lili, Elliot, Yaxin, Maxime, Daniel, Flavien, Nam, Alok, Yihan, je vous adresse un immense merci d'être venus. La soutenance de thèse a été l'un des moments les plus marquants de ma vie, et tout cela a été rendu possible grâce à la participation et à l'aide précieuse de chacun d'entre vous.
-
+À mes amis rencontrés pendant ma thèse, avec qui j'ai partagé de mémorables moments dans les bars, lors des soirées jeux et des voyages : Nicolas, Daniel, Lili, Elliot, Yaxin, Maxime, Daniel, Flavien, Nam, Alok, Yihan, je vous adresse un immense merci d'être venus. La soutenance de thèse a été l'un des moments les plus marquants de ma vie, et tout cela a été rendu possible grâce à la participation et à l'aide précieuse de chacun d'entre vous.
 Je tiens également à exprimer ma gratitude envers Virginie \textsc{Ren}, ma cousine, qui a non seulement assisté à ma soutenance, mais qui est restée jusqu'à la fin. 
 
 Enfin, je voudrais exprimer ma profonde gratitude envers celle que j'aime, Dabeen \textsc{Oh}, pour son soutien constant. Même si les sciences ne sont pas ton domaine de prédilection, tu as toujours fait des efforts pour t'intéresser à mon travail. Je te remercie infiniment d'avoir pris le temps de comprendre, lire, relire et corriger ma thèse. Cette attention précieuse est une véritable preuve d'amour, et je t'en suis infiniment reconnaissant.
@@ -125,9 +124,8 @@ Siwar \textsc{Chibani}, for our discussions on the intricacies of an academic ca
 
 I would like to express my deep gratitude to all my friends who made the effort to attend my thesis defense, even though the subject matter was far from their areas of interest. First and foremost, I want to thank Agathe \textsc{Massiot}, my college friend. Who would have thought that she would come all the way from Normandy to Paris to support me, nearly twenty years later? Thomas \textsc{Hossen}, my steadfast friend since prepa, has shared countless great moments with me, whether in restaurants, concert halls, or theaters. I am immensely grateful to him for coming to encourage me during this final stage of my education.
 
-To my fellow doctoral friends, with whom I've shared memorable times in bars, game nights, and trips over these three years: Nicolas, Daniel, Lili, Elliot, Yaxin, Maxime, Daniel, Flavien, Nam, Alok, Yihan, I extend my heartfelt thanks for coming.
-
-I would also like to express my gratitude to Virginie \textsc{Ren}, my cousin, who not only attended my thesis defense but stayed until the end. The thesis defense was one of the most significant moments of my life, and all of it was made possible thanks to the participation and invaluable assistance of each one of you.
+To my friends, with whom I've shared memorable times in bars, game nights, and trips over these three years: Nicolas, Daniel, Lili, Elliot, Yaxin, Maxime, Daniel, Flavien, Nam, Alok, Yihan, I extend my heartfelt thanks for coming.The thesis defense was one of the most significant moments of my life, and all of it was made possible thanks to the participation and invaluable assistance of each one of you.
+I would also like to express my gratitude to Virginie \textsc{Ren}, my cousin, who not only attended my thesis defense but stayed until the end. 
 
 Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love, and I am immensely grateful.
 
