--- a/remerciements.tex
+++ b/remerciements.tex
@@ -20,12 +20,12 @@ J'adresse également mes remerciements à la présidente du jury, Anne \textsc{B
 
 J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer à ma soutenance en tant que membres invités et représentants d'Orano. Je suis particulièrement reconnaissant envers Isabelle pour son implication dans l'encadrement de ma thèse, apportant toujours un regard bienveillant et pragmatique à mes travaux.
 
-Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chaleureusement sur le site du CEA Marcoule, même si les circonstances liées à la situation sanitaire ne m'ont pas permis de m'y rendre aussi souvent que prévu. Je suis également reconnaissant de ton encadrement scientifique éclairé de chimiste théoricien expérimenté, ainsi que pour tes conseils bienveillants dans mes démarches administratives avec le CEA, bien que ce ne soit pas ton rôle. Je suis très reconnaissant à Orano et au CEA pour leurs soutiens financiers et matériels à mon travail de recherche.
+Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chaleureusement sur le site du CEA Marcoule, même si les circonstances liées à la situation sanitaire ne m'ont pas permis de m'y rendre aussi souvent que prévu. Je suis également reconnaissant de ton encadrement scientifique éclairé de chimiste théoricien expérimenté, ainsi que pour tes conseils bienveillants dans mes démarches administratives avec le CEA, bien que ce ne soit pas ton rôle. Je suis très reconnaissant à Orano et au CEA pour leurs soutiens financiers et matériels au long de mon travail de recherche.
 
 Je tiens à exprimer ma profonde gratitude envers mon superviseur, François-Xavier \textsc{Coudert}, qui m'a ouvert les portes de son bureau et m'y a accueilli pendant plus de trois ans. Ses conseils bienveillants lors des moments de doute, assortis de remarques constructives, ont été inestimables. Au-delà de son expertise dans l'encadrement de projets scientifiques, il m'a également inspiré par sa passion pour la science et sa grande modestie. Je suis convaincu que ces qualités continueront de me guider tout au long de ma carrière.
 
 Je souhaite également exprimer toute ma sympathie et ma reconnaissance envers les doctorants que j'ai eu la chance de rencontrer et avec qui j'ai partagé de précieux moments, que ce soit au bureau ou en dehors :
-Nicolas \textsc{Castel}, qui a embarqué sur son aventure doctorale en même temps que moi et avec qui j'ai partagé non seulement un bureau, mais aussi des soirées agréables.
+Nicolas \textsc{Castel}, qui a rejoint l'équipe des doctorants en même temps que moi et avec qui j'ai partagé non seulement un bureau, mais aussi beaucoup de soirées afterwork, des sorties culturelles et des vacances.
 Wenke \textsc{Li}, qui terminait sa dernière année de thèse et que je connaissais déjà depuis mon stage, je te remercie pour ta bonne humeur, ta générosité et ton altruisme.
 Maxime \textsc{Ducamp}, qui entamait ses deux dernières années de thèse avec nous et dont l'habitude de se lever tôt m'a toujours impressionné (8h, c'est vraiment tôt). Merci pour ton aide pour les différentes démarches administratives pour la thèse (ton planning avant la soutenance nous a été bien utile avec Nicolas).
 Lionel \textsc{Zoubritzky}, qui a rejoint notre grande famille des doctorants au début de ma deuxième année et dont les travaux sur la topologie des matériaux nanoporous m'ont toujours intrigué. Merci pour nos nombreuses discussions sur mes problèmes algorithmiques, tu es peut-être la seule personne avec qui je peux en discuter sans t'ennuyer !
@@ -127,7 +127,7 @@ I would like to express my deep gratitude to all my friends who made the effort 
 To my friends, with whom I've shared memorable times in bars, game nights, and trips over these three years: Nicolas, Daniel, Lili, Elliot, Yaxin, Maxime, Daniel, Flavien, Nam, Alok, Yihan, I extend my heartfelt thanks for coming.The thesis defense was one of the most significant moments of my life, and all of it was made possible thanks to the participation and invaluable assistance of each one of you.
 I would also like to express my gratitude to Virginie \textsc{Ren}, my cousin, who not only attended my thesis defense but stayed until the end. 
 
-Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love, and I am immensely grateful.
+Lastly, I would like to express my deepest gratitude to the one I love, Dabeen \textsc{Oh}, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love, and I am immensely grateful.
 
 \endgroup
 \newpage
