--- a/psl-cover.sty
+++ b/psl-cover.sty
@@ -224,11 +224,11 @@
 	%% author
 	\node[xshift=-85mm, yshift=-8mm, anchor=north west] at (o) {
 	 	\begin{minipage}[h]{.3\paperwidth}
-	 	\pslbluelabel{Présentée par}\unskip\strut\par
+	 	\pslbluelabel{Soutenue par}\unskip\strut\par
 	 	\vspace{1mm}
 	 	{\fontsize{16}{19}\selectfont\textbf{\@author{}}}\unskip\strut\par
 	 	\vspace{1mm}
-	 	{\fontsize{12}{15}\selectfont Soutenance prévue le \\ \@date{}}\unskip\strut\par
+	 	{\fontsize{12}{15}\selectfont Le \@date{}}\unskip\strut\par
 	 	\end{minipage}
 	};
 
